--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>wlcome to git</h1>
+    <h1>wlcome to git & github</h1>
   </body>
 </html>
